--- a/index.html
+++ b/index.html
@@ -6,17 +6,159 @@
   <title>Botanika</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка и оплата</a></li>
+        <li><a href="#">Отзывы</a></li>
+        <li><a href="#"><img src="#" alt="логотип Botanika"></a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Контакты</a></li>
+        <li><a href="#">Корзина</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section class="main">
+      <h1>Авторские букеты в Петербурге</h1>
+      <p>Оригинальные свежие букеты с доставкой по всему городу</p>
+      <a href="#">Смотреть каталог</a>
+      <img src="#" alt="Букет цветов">
+      <img src="#" alt="Букет цветов">
+    </section>
+    <section class="Advantages">
+
+    </section>
+    <section>
+      <div>
+        <img src="#" alt="Символ автомобиля">
+        <p>Быстрая доставка</p>
+        <p>Можем собрать букет и передать его в доставку всего за час</p>
+    </div>
+      <div>
+        <img src="#" alt="Символ букета">
+        <p>Всегда свежие цветы</p>
+        <p>Тщательно следим за состоянием цветов, 
+          а опытные флористы отбирают для букетов каждый цветок.</p>
+    </div>
+      <div>
+        <img src="#" alt="Символ фотоаппарата">
+        <p>Отправляем фото цветов</p>
+        <p>Перед доставкой сделаем фотографию букета и отправим вам.</p>
+    </div>
+    </section>
+    <section class="popular">
+      <h2>Популярные букеты</h2>
+      <h3>Букет «Нежность»</h3>
+      <p>Элегантный букет, 
+        который станет отличным подарком на день рождения или юбилей.</p>
+        <p>30 × 40 см</p>
+        <p>3600 руб.</p>
+        <a href="#">Заказать</a>
+        <img src="#" alt="Пример букета цветов">
+        <div>СТРЕЛОЧКИИИИИИИИИИИИ</div>
+    </section>
+    <section class="catalog">
+      <img src="#" alt="Свадебные букеты">
+      <img src="#" alt="Букеты с пионами">
+      <img src="#" alt="Выбрать букет">
+    </section>
+    <section class="discount">
+      <p>Скидка 10% на первый заказ</p>
+      <p>Если заказываете у нас букет впервые — 
+        при оформлении заказа введите промокод «Botanika2021» 
+        и получите скидку 10%.
+      </p>
+      <img src="#" alt="Пример букета цветов">
+    </section>
+    <section class="steps">
+      <h2>4 шага к идеальному букету</h2>
+      <div>
+        <div>
+          <img src="#" alt="заказ">
+          <p>Заказ</p>
+          <p>Выберите понравившийся букет из каталога и оформите заказ</p>
+        </div>
+        <div>
+          <img src="#" alt="детали">
+          <p>Уточнение деталей</p>
+          <p>Наш флорист позвонит вам после оформления заказа, 
+            чтобы уточнить детали</p>
+        </div>
+        <div>
+          <img src="#" alt="оплата">
+          <p>Оплата</p>
+          <p>Оплатить заказ можно онлайн
+            на сайте или при получении</p>
+        </div>
+        <div>
+          <img src="#" alt="доставка">
+          <p>Доставка</p>
+          <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
+        </div>
+        
+      </div>
+    </section>
+    <section class="news">
+      <div>
+        <h2>Следите за нашими новостями</h2>
+        <p>Подписывайтесь на наши соцсети и узнавайте
+        о новинках и акциях первым.</p>
+        <div>СОЦСЕТИИИИИИИ</div>
+      </div>
+      <div>
+        <img src="#" alt="букет цветов">
+        <img src="#" alt="букет цветов">
+        <img src="#" alt="букет цветов">
+      </div>
+    </section>
+    <section class="reviews">
+      <h2>Отзывы</h2>
+      <div>
+        <p>Всё очень понравилось! Быстрое оформление заказа, 
+          выбор удобного времени доставки. Всем большое спасибо!</p>
+        <p>Марина</p>
+      </div>
+      <div>
+        <p>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. 
+          Букет очень понравился, буду ещё заказывать!</p>
+        <p>Татьяна</p>
+      </div>
+      <div>
+        <p>Выбор букетов на любой вкус
+          и цену. Бывают хорошие скидки,
+          а флористы всегда помогут и точно соберут красивый букет!</p>
+        <p>Ольга</p>
+      </div>
+     
+    </section>
+    <section class="contacts">
+      <div>
+        <h2>Мы ждем вас</h2>
+        <p>Приходите к нам:</p>
+        <p>Санкт-Петербург,
+          ул. Большая Конюшенная, 19</p>
+        <p>Режим работы:</p>
+        <p>Пн-Вск, с 9-00 до 20-00</p>
+        <p>Позвоните нам:</p>
+        <p>+ 7 (812) 983-47-19</p>
+        <p>Напишите нам:</p>
+        <p>info@botanika.ru</p>
+      </div>
+      <img src="#" alt="Карта проезда">
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <ul>
+      <li><a href="#"><img src="#" alt="логотип Botanika"></a></li>
+      <li><a href="#">Каталог</a></li>
+      <li><a href="#">Доставка и оплата</a></li>
+      <li><a href="#">Отзывы</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+      <li><a href="#">Контакты</a></li>
+      <li><a href="#">СОЦСЕТИИИИ</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
