--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Доставка и оплата</a></li>
         <li><a href="#">Отзывы</a></li>
-        <li><a href="#"><img src="#" alt="логотип Botanika"></a></li>
+        <li><a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a></li>
         <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Контакты</a></li>
         <li><a href="#">Корзина</a></li>
@@ -24,26 +24,26 @@
       <h1>Авторские букеты в Петербурге</h1>
       <p>Оригинальные свежие букеты с доставкой по всему городу</p>
       <a href="#">Смотреть каталог</a>
-      <img src="#" alt="Букет цветов">
-      <img src="#" alt="Букет цветов">
+      <img src="img/main1.png" alt="Букет цветов">
+      <img src="img/main2.png" alt="Букет цветов">
     </section>
     <section class="Advantages">
 
     </section>
     <section>
       <div>
-        <img src="#" alt="Символ автомобиля">
+        <img src="img/adv1.svg" alt="Символ автомобиля">
         <p>Быстрая доставка</p>
         <p>Можем собрать букет и передать его в доставку всего за час</p>
     </div>
       <div>
-        <img src="#" alt="Символ букета">
+        <img src="img/adv2.svg" alt="Символ букета">
         <p>Всегда свежие цветы</p>
         <p>Тщательно следим за состоянием цветов, 
           а опытные флористы отбирают для букетов каждый цветок.</p>
     </div>
       <div>
-        <img src="#" alt="Символ фотоаппарата">
+        <img src="img/adv3.svg" alt="Символ фотоаппарата">
         <p>Отправляем фото цветов</p>
         <p>Перед доставкой сделаем фотографию букета и отправим вам.</p>
     </div>
@@ -56,13 +56,16 @@
         <p>30 × 40 см</p>
         <p>3600 руб.</p>
         <a href="#">Заказать</a>
-        <img src="#" alt="Пример букета цветов">
-        <div>СТРЕЛОЧКИИИИИИИИИИИИ</div>
+        <img src="img/popular.png" alt="Пример букета цветов">
+        <div>
+          <img src="img/Arrow 2.svg" alt="стрелка влево">
+          <img src="img/Arrow 1.svg" alt="стрелка вправо">
+        </div>
     </section>
     <section class="catalog">
-      <img src="#" alt="Свадебные букеты">
-      <img src="#" alt="Букеты с пионами">
-      <img src="#" alt="Выбрать букет">
+      <img src="img/catal1.png" alt="Свадебные букеты">
+      <img src="img/catal2.png" alt="Букеты с пионами">
+      <img src="img/catal3.png" alt="Выбрать букет">
     </section>
     <section class="discount">
       <p>Скидка 10% на первый заказ</p>
@@ -70,30 +73,30 @@
         при оформлении заказа введите промокод «Botanika2021» 
         и получите скидку 10%.
       </p>
-      <img src="#" alt="Пример букета цветов">
+      <img src="img/discount.png" alt="Пример букета цветов">
     </section>
     <section class="steps">
       <h2>4 шага к идеальному букету</h2>
       <div>
         <div>
-          <img src="#" alt="заказ">
+          <img src="img/step1.svg" alt="заказ">
           <p>Заказ</p>
           <p>Выберите понравившийся букет из каталога и оформите заказ</p>
         </div>
         <div>
-          <img src="#" alt="детали">
+          <img src="img/step2.svg" alt="детали">
           <p>Уточнение деталей</p>
           <p>Наш флорист позвонит вам после оформления заказа, 
             чтобы уточнить детали</p>
         </div>
         <div>
-          <img src="#" alt="оплата">
+          <img src="img/step3.svg" alt="оплата">
           <p>Оплата</p>
           <p>Оплатить заказ можно онлайн
             на сайте или при получении</p>
         </div>
         <div>
-          <img src="#" alt="доставка">
+          <img src="img/step4.svg" alt="доставка">
           <p>Доставка</p>
           <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
         </div>
@@ -105,12 +108,12 @@
         <h2>Следите за нашими новостями</h2>
         <p>Подписывайтесь на наши соцсети и узнавайте
         о новинках и акциях первым.</p>
-        <div>СОЦСЕТИИИИИИИ</div>
+        <img src="img/social.svg" alt="соцсети">
       </div>
       <div>
-        <img src="#" alt="букет цветов">
-        <img src="#" alt="букет цветов">
-        <img src="#" alt="букет цветов">
+        <img src="img/new1.png" alt="букет цветов">
+        <img src="img/new2.png" alt="букет цветов">
+        <img src="img/new3.png" alt="букет цветов">
       </div>
     </section>
     <section class="reviews">
@@ -146,18 +149,18 @@
         <p>Напишите нам:</p>
         <p>info@botanika.ru</p>
       </div>
-      <img src="#" alt="Карта проезда">
+      <img src="img/map.png" alt="Карта проезда">
     </section>
   </main>
   <footer>
     <ul>
-      <li><a href="#"><img src="#" alt="логотип Botanika"></a></li>
+      <li><a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a></li>
       <li><a href="#">Каталог</a></li>
       <li><a href="#">Доставка и оплата</a></li>
       <li><a href="#">Отзывы</a></li>
       <li><a href="#">Спецпредложения</a></li>
       <li><a href="#">Контакты</a></li>
-      <li><a href="#">СОЦСЕТИИИИ</a></li>
+      <li><a href="#"><img src="img/social.svg" alt="соцсети"></a></li>
     </ul>
   </footer>
 </body>
