--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <header>
     <nav>
+      <a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a>
       <ul>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Доставка и оплата</a></li>
         <li><a href="#">Отзывы</a></li>
-        <li><a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a></li>
         <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Контакты</a></li>
         <li><a href="#">Корзина</a></li>
@@ -153,8 +153,8 @@
     </section>
   </main>
   <footer>
+    <a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a>
     <ul>
-      <li><a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a></li>
       <li><a href="#">Каталог</a></li>
       <li><a href="#">Доставка и оплата</a></li>
       <li><a href="#">Отзывы</a></li>
