--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,25 +28,22 @@
       <img src="img/main2.png" alt="Букет цветов">
     </section>
     <section class="Advantages">
-
-    </section>
-    <section>
       <div>
         <img src="img/adv1.svg" alt="Символ автомобиля">
         <p>Быстрая доставка</p>
         <p>Можем собрать букет и передать его в доставку всего за час</p>
-    </div>
+      </div>
       <div>
         <img src="img/adv2.svg" alt="Символ букета">
         <p>Всегда свежие цветы</p>
         <p>Тщательно следим за состоянием цветов, 
           а опытные флористы отбирают для букетов каждый цветок.</p>
-    </div>
+      </div>
       <div>
         <img src="img/adv3.svg" alt="Символ фотоаппарата">
         <p>Отправляем фото цветов</p>
         <p>Перед доставкой сделаем фотографию букета и отправим вам.</p>
-    </div>
+      </div>
     </section>
     <section class="popular">
       <h2>Популярные букеты</h2>
@@ -58,8 +55,8 @@
         <a href="#">Заказать</a>
         <img src="img/popular.png" alt="Пример букета цветов">
         <div>
-          <img src="img/Arrow 2.svg" alt="стрелка влево">
-          <img src="img/Arrow 1.svg" alt="стрелка вправо">
+          <button type="button"><img src="img/Arrow 2.svg" alt="стрелка влево"></button>
+          <button type="button"><img src="img/Arrow 1.svg" alt="стрелка вправо"></button>
         </div>
     </section>
     <section class="catalog">
@@ -108,7 +105,7 @@
         <h2>Следите за нашими новостями</h2>
         <p>Подписывайтесь на наши соцсети и узнавайте
         о новинках и акциях первым.</p>
-        <img src="img/social.svg" alt="соцсети">
+        <a href="#"><img src="img/social.svg" alt="соцсети"></a>
       </div>
       <div>
         <img src="img/new1.png" alt="букет цветов">
@@ -145,9 +142,9 @@
         <p>Режим работы:</p>
         <p>Пн-Вск, с 9-00 до 20-00</p>
         <p>Позвоните нам:</p>
-        <p>+ 7 (812) 983-47-19</p>
+        <p><a  href="tel:+78129834719">+ 7 (812) 983-47-19</a></p>
         <p>Напишите нам:</p>
-        <p>info@botanika.ru</p>
+        <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
       </div>
       <img src="img/map.png" alt="Карта проезда">
     </section>
