--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <title>Botanika</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a>
+  <header>  
+    <nav class="first-nav">
       <ul>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Доставка и оплата</a></li>
         <li><a href="#">Отзывы</a></li>
+      </ul>
+      <a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a>
+      <ul>
         <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Контакты</a></li>
         <li><a href="#">Корзина</a></li>
@@ -21,27 +29,27 @@
   </header>
   <main>
     <section class="main">
-      <h1>Авторские букеты в Петербурге</h1>
+      <h1>Авторские букеты <span>в Петербурге</span></h1>
       <p>Оригинальные свежие букеты с доставкой по всему городу</p>
       <a href="#">Смотреть каталог</a>
       <img src="img/main1.png" alt="Букет цветов">
       <img src="img/main2.png" alt="Букет цветов">
     </section>
-    <section class="Advantages">
+    <section class="advantages">
       <div>
         <img src="img/adv1.svg" alt="Символ автомобиля">
-        <p>Быстрая доставка</p>
+        <h4>Быстрая доставка</h4>
         <p>Можем собрать букет и передать его в доставку всего за час</p>
       </div>
       <div>
         <img src="img/adv2.svg" alt="Символ букета">
-        <p>Всегда свежие цветы</p>
+        <h4>Всегда свежие цветы</h4>
         <p>Тщательно следим за состоянием цветов, 
           а опытные флористы отбирают для букетов каждый цветок.</p>
       </div>
       <div>
         <img src="img/adv3.svg" alt="Символ фотоаппарата">
-        <p>Отправляем фото цветов</p>
+        <h4>Отправляем фото цветов</h4>
         <p>Перед доставкой сделаем фотографию букета и отправим вам.</p>
       </div>
     </section>
@@ -50,51 +58,69 @@
       <h3>Букет «Нежность»</h3>
       <p>Элегантный букет, 
         который станет отличным подарком на день рождения или юбилей.</p>
-        <p>30 × 40 см</p>
-        <p>3600 руб.</p>
-        <a href="#">Заказать</a>
-        <img src="img/popular.png" alt="Пример букета цветов">
-        <div>
-          <button type="button"><img src="img/Arrow 2.svg" alt="стрелка влево"></button>
-          <button type="button"><img src="img/Arrow 1.svg" alt="стрелка вправо"></button>
-        </div>
+      <p>30 × 40 см</p>
+      <p class="price">3600 руб.</p>
+      <a href="#">Заказать</a>
+      <img src="img/popular.png" alt="Пример букета цветов">
+      <div>
+        <button type="button"><img src="img/Arrow 2.svg" alt="стрелка влево"></button>
+        <button type="button"><img src="img/Arrow 1.svg" alt="стрелка вправо"></button>
+      </div>
     </section>
     <section class="catalog">
-      <img src="img/catal1.png" alt="Свадебные букеты">
-      <img src="img/catal2.png" alt="Букеты с пионами">
-      <img src="img/catal3.png" alt="Выбрать букет">
+      <div>
+        <div class="color">
+        <h2>Свадебные букеты</h2>
+        <p>Букеты для невест</p>
+        </div>
+      </div>
+      <div>
+        <div class="color">
+          <h2>Букеты с пионами</h2>
+          <p>Букеты с сезонными пионами</p>
+        </div>
+      </div>
+      <div>
+        <div class="color">
+          <h2>Выбрать букет</h2>
+          <p>Букеты в ассортименте</p>
+        </div>
+      </div>
+      
     </section>
     <section class="discount">
-      <p>Скидка 10% на первый заказ</p>
-      <p>Если заказываете у нас букет впервые — 
-        при оформлении заказа введите промокод «Botanika2021» 
-        и получите скидку 10%.
-      </p>
-      <img src="img/discount.png" alt="Пример букета цветов">
+      <div>
+        <h2>Скидка 10% <br>на первый заказ</h2>
+        <p>Если заказываете у нас букет впервые — 
+          при оформлении заказа введите промокод «Botanika2021» 
+          и получите скидку 10%.
+        </p>
+        <img src="img/discount.png" alt="Пример букета цветов">
+      </div>
     </section>
     <section class="steps">
       <h2>4 шага к идеальному букету</h2>
       <div>
         <div>
           <img src="img/step1.svg" alt="заказ">
-          <p>Заказ</p>
+          <h4>Заказ</h4>
           <p>Выберите понравившийся букет из каталога и оформите заказ</p>
         </div>
         <div>
           <img src="img/step2.svg" alt="детали">
-          <p>Уточнение деталей</p>
+          <h4>Уточнение деталей</h4>
           <p>Наш флорист позвонит вам после оформления заказа, 
             чтобы уточнить детали</p>
         </div>
         <div>
           <img src="img/step3.svg" alt="оплата">
-          <p>Оплата</p>
+          <h4>Оплата</h4>
           <p>Оплатить заказ можно онлайн
             на сайте или при получении</p>
         </div>
         <div>
           <img src="img/step4.svg" alt="доставка">
-          <p>Доставка</p>
+          <h4>Доставка</h4>
           <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
         </div>
         
