--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
         <h2>Следите за нашими новостями</h2>
         <p>Подписывайтесь на наши соцсети и узнавайте
         о новинках и акциях первым.</p>
-        <a href="#"><img src="img/social.svg" alt="соцсети"></a>
+        <div>
+          <a href="#"><img src="img/instagram_icon.svg" alt="инстаграмм"></a>
+          <a href="#"><img src="img/facebook_icon.svg" alt="фейсбук"></a>
+          <a href="#"><img src="img/twitter_icon.svg" alt="твиттер"></a>
+        </div>
       </div>
       <div>
         <img src="img/new1.png" alt="букет цветов">
@@ -160,7 +164,7 @@
      
     </section>
     <section class="contacts">
-      <div>
+      <div class="rectangle">
         <h2>Мы ждем вас</h2>
         <p>Приходите к нам:</p>
         <p>Санкт-Петербург,
@@ -176,15 +180,19 @@
     </section>
   </main>
   <footer>
-    <a href="#"><img src="img/logo.svg" alt="логотип Botanika"></a>
+    <a href="#"><img src="img/logo-white.svg" alt="логотип Botanika"></a>
     <ul>
       <li><a href="#">Каталог</a></li>
       <li><a href="#">Доставка и оплата</a></li>
       <li><a href="#">Отзывы</a></li>
       <li><a href="#">Спецпредложения</a></li>
       <li><a href="#">Контакты</a></li>
-      <li><a href="#"><img src="img/social.svg" alt="соцсети"></a></li>
     </ul>
+    <div>
+      <a href="#"><img src="img/instagram_icon_white.svg" alt="инстаграмм"></a>
+      <a href="#"><img src="img/facebook_icon_white.svg" alt="фейсбук"></a>
+      <a href="#"><img src="img/twitter_icon_white.svg" alt="твиттер"></a>
+    </div>
   </footer>
 </body>
 </html>
