--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Botanika</title>
 </head>
 <body>
@@ -63,8 +63,8 @@
       <a href="#">Заказать</a>
       <img src="img/popular.png" alt="Пример букета цветов">
       <div>
-        <button type="button"><img src="img/Arrow 2.svg" alt="стрелка влево"></button>
-        <button type="button"><img src="img/Arrow 1.svg" alt="стрелка вправо"></button>
+        <button type="button"><img src="img/arrow_left.svg" alt="стрелка влево"></button>
+        <button type="button"><img src="img/arrow_right.svg" alt="стрелка вправо"></button>
       </div>
     </section>
     <section class="catalog">
